src/test/deca/context/invalid/fieldNameIsSuperMethodName.deca
class A{
	int equals = 5;
}
